# cob_teacher

./: CMakeLists.txt  manifest.xml  package.xml  plugin.xml  setup.py
script/: bride_teacher  calibrate_camera_frame_client.py  calibrate_camera_frame_server.py
src/: FieldUpdater.py  MoveBaseShelf_goal.yaml  MoveHomePTP_goal.yaml  MoveToRobotDeck_goal.yaml  YamlManager.py  cob_teacher.py  publish_coordinate_systems.py  rqt_teacher.py  teachers.py
src/cob_teacher/: FieldUpdater.py  YamlManager.py  broadcast_calibration_frames.py  broadcast_default_handle_frame.py  cob_teacher.py  handle_correction.py  lookup_calibration.py  publish_coordinate_systems.py  rqt_teacher.py  teachers.py
srv/: CalibrateCameraFrame.srv
