<package>
  <name>cob_teacher</name>
  <version>0.1.0</version>
  <description>cob_teacher</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cob_teacher</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>